--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,6 +14,9 @@ layout: default
         <a href="https://discord.gg/QnbWkGjs" class="main-link discord">
             💬 Discord do Rusbando
         </a>
+        <a href="/CrocPRMsite/analysis/exp-analysis.html" class="main-link">
+            📊 Análise de XP Interativa
+        </a>
     </div>
     
     <!-- Music Player -->
