teste de xp analysis

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
         <a href="https://discord.gg/QnbWkGjs" class="main-link discord">
             💬 Discord do Rusbando
         </a>
-        <a href="/CrocPRMsite/analysis/exp-analysis.html" class="main-link">
+        <a href="{{ '/analysis/exp-analysis.html' | relative_url }}" class="main-link">
             📊 Análise de XP Interativa
         </a>
     </div>
