--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
                 📥 Baixar Cliente
             </a>
         </div>
-        <a href="https://discord.gg/QnbWkGjs" class="main-link discord">
+        <a href="https://discord.gg/K3wJYuURGZ" class="main-link discord">
             💬 Discord do Rusbando
         </a>
         <a href="{{ '/analysis/exp-analysis.html' | relative_url }}" class="main-link">
