--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -114,7 +114,7 @@ layout: default
                          <li><strong>Illusionist</strong>: Grand Summoning habilitado (duração 50s, CD 30s), bug dos clones corrigido (autocast), Chaotic Heal ajustado.</li>
                          <li><strong>Dark Knight</strong>: Harvest não custa mais SP (custa 10% HP), impede swap de equipamentos, não desativa com HP baixo.</li>
                          <li><strong>Peacekeeper</strong>: Eternal Chain agora aplica Combo Ready corretamente com Cast Ready.</li>
-                         <li><strong>Storages</strong>: adicionados 2 storages extras.</li>
+                         <li><strong>Storage</strong>: adicionado 1 storage extra.</li>
                          <li><strong>Critical LUK</strong>: escala corrigida de 5 LUK → 10 LUK por 1% de dano crítico.</li>
                          <li><strong>Carta Star Scourge</strong>: clone fortemente buffado (~60% do dano do jogador + crits).</li>
                          <li><strong>PVP Einbroch Deadlands</strong>: flags PVP corrigidas (ein_dead01, 02 e 03).</li>
