--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -119,6 +119,7 @@ layout: default
                          <li><strong>Carta Star Scourge</strong>: clone ajustado (~60% do dano do jogador + crits).</li>
                          <li><strong>PVP Einbroch Deadlands</strong>: flags PVP corrigidas (ein_dead01, 02 e 03).</li>
                          <li><strong>ASPD Limit</strong>: modificado de 50 AGI → 40 AGI (vamos experimentar).</li>
+                         <li><strong>Mini Trial Astrologika</strong>: mais difícil (2-3 cristais, Echo com dobro do HP).</li>
                      </ul>
                     
                     <div class="patch-actions">
